fix: Spacing issues

--- a/niall-paterson/partials/_layout.scss
+++ b/niall-paterson/partials/_layout.scss
@@ -29,13 +29,11 @@ h1 {
 }
 
 h2 {
-  margin: $margin-large;
   padding: $padding-small 0;
 }
 
 p {
   margin: $margin-small;
-  padding: $padding-small 0;
 }
 
 section {
